feat: add new application view component

--- a/src/app/components/job-list/job-list.html
+++ b/src/app/components/job-list/job-list.html
@@ -1,5 +1,6 @@
 <h2>Job Applications</h2>
-<table border="1" *ngIf="applications$ | async as applications; else loading">
+@if (applications$ | async; as applications) {
+<table border="1">
   <thead>
     <tr>
       <th>Company</th>
@@ -9,19 +10,25 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let app of applications">
+    @for (app of applications; track app.id) {
+    <tr (click)="navigateToView(app.id)">
       <td>{{ app.companyName }}</td>
       <td>{{ app.position }}</td>
-      <td>
+      <td (click)="cancelNavigateToView($event)">
         <select [(ngModel)]="app.status" (change)="onStatusChange(app, app.status)">
-          <option *ngFor="let s of status" [value]="s">{{ s }}</option>
+          @for (s of status; track s) {
+          <option [value]="s">{{ s }}</option>
+          }
         </select>
       </td>
       <td>{{ app.dateApplied | date }}</td>
     </tr>
+    }
   </tbody>
 </table>
-
+}
+@else {
 <ng-template #loading>
   <p>Loading applications...</p>
 </ng-template>
+}
