feat: add login jwt

--- a/src/app/components/job-list/job-list.html
+++ b/src/app/components/job-list/job-list.html
@@ -1,4 +1,7 @@
 <h2>Job Applications</h2>
+<nav>
+  <a routerLink="/add">Add New</a>
+</nav>
 @if (applications$ | async; as applications) {
 <table border="1">
   <thead>
