--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,3 @@
 <h1>Job Application Tracker</h1>
-    <nav>
-      <a routerLink="/">List</a> |
-      <a routerLink="/add">Add New</a>
-    </nav>
+    <button (click)="onLogOut()">Log Out</button>
     <router-outlet></router-outlet>
