--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,12 @@
-<h1>Job Application Tracker</h1>
-    <button (click)="onLogOut()">Log Out</button>
-    <router-outlet></router-outlet>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Job Application Tracker</a>
+    <div class="navbar-nav ms-auto">
+      <button class="btn btn-outline-light" (click)="onLogOut()">Log Out</button>
+    </div>
+  </div>
+</nav>
+
+<div class="container mt-4">
+  <router-outlet></router-outlet>
+</div>
