--- a/src/app/components/job-view/job-view.html
+++ b/src/app/components/job-view/job-view.html
@@ -37,7 +37,7 @@
           </div>
           
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-outline-secondary me-md-2" routerLink="/app">
+            <button class="btn btn-outline-secondary me-md-2" (click)="onBackToList()">
               <i class="bi bi-arrow-left"></i> Back to List
             </button>
             <button class="btn btn-danger" (click)="onDelete()">
